--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-scripts": "3.1.2"
   },
   "scripts": {
-    "start": "node ./server/server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
